update code server plugin