@@ -1,3 +1,4 @@
+import org.jetbrains.intellij.tasks.RunIdeTask
 import java.nio.file.Paths
 
 group = rootProject.group
@@ -10,6 +11,7 @@ dependencies {
             branch = "master"
         }
     }
+    implementation(libs.kotlin.argparser)
     implementation(libs.zip4j)
     implementation(libs.gumtreediff.core)
     implementation(libs.gumtreediff.gen.python)
@@ -21,11 +23,48 @@ dependencies {
     testRuntimeOnly(libs.junit.platform.console)
 }
 
+abstract class BaseCLITask : RunIdeTask() {
+    @get:Input
+    abstract val taskName: Property<String>
+
+    init {
+        jvmArgs = listOf(
+            "-Dgt.pp.path=${Paths.get(project.parent!!.projectDir.toString(), "libs", "pythonparser")}",
+            "-Djava.awt.headless=true",
+            "--add-exports",
+            "java.base/jdk.internal.vm=ALL-UNNAMED",
+            "-Xmx5048m",
+            "-Xms5048m",
+        )
+        standardInput = System.`in`
+        standardOutput = System.`out`
+    }
+
+    fun setArgs(block: MutableList<String>.() -> Unit = {}) {
+        args = mutableListOf<String>().apply {
+            add(taskName.get())
+            block()
+        }
+    }
+}
+
 tasks {
     test {
 //        useJUnitPlatform()
         jvmArgs = listOf(
             "-Dgt.pp.path=${Paths.get(project.parent!!.projectDir.toString(), "libs", "pythonparser")}"
         )
+    }
+
+    val serverTaskName = "ij-code-server"
+    register(serverTaskName, BaseCLITask::class) {
+        taskName.set(serverTaskName)
+        dependsOn(build)
+        val port: String? by project
+        val language: String? by project
+        setArgs {
+            port?.let { add("--port=$it") }
+            language?.let { add("--language=$it") }
+        }
     }
 }
